<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version">v%1sBeta</string>
    <string name="app_name">IPet</string>
    <string name="action_settings">设置</string>
    <string name="splash_desc">启动界面</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="guide_desc">引导界面</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="guide_btn_enter">立即体验</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome_register_or_login">WelcomeRegisterOrLoginActivity</string>
    <string name="login_btn">登录</string>
    <string name="login_register">注册</string>
    <string name="login_connect_sina">微博账号登录</string>
    <string name="qq_login">QQ账号登录</string>
    <string name="title_login">登录</string>
    <string name="account">账号:</string>
    <string name="input_account_hint">请输入邮箱</string>
    <string name="password">密码:</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login_toggle_password_show">显示</string>
    <string name="login_toggle_password_hide">隐藏</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="ok_button">确定</string>
    <string name="login_empty_account">账号不能为空</string>
    <string name="login_empty_password">密码不能为空</string>
    <string name="login_failure_other">登录失败</string>
    <string name="login_failure_auth">用户名或密码不正确</string>
    <string name="login_loading">正在登录...</string>
    
    <string name="main_home_title">首页</string>
    <string name="main_find_title">发现</string>
    <string name="main_camera_title">拍照</string>
    <string name="main_conversation_title">消息</string>
    <string name="main_me_title">我的</string>
    
    
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    
    
    

</resources>
